Projekt bazy ver 1

--- a/SkyReg/SkyReg/SkyReg.csproj
+++ b/SkyReg/SkyReg/SkyReg.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\FlightsStatuses.cs" />
+    <Compile Include="Enums\UsersSpecialTypes.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
