--- a/SkyReg/DataLayer/App.config
+++ b/SkyReg/DataLayer/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DLModelContainer" connectionString="metadata=res://*/DLModel.csdl|res://*/DLModel.ssdl|res://*/DLModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STACJONARNY\SQLEXPRESS2016;initial catalog=db_skyreg;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
