--- a/SkyReg/DataLayer/DataLayer.csproj
+++ b/SkyReg/DataLayer/DataLayer.csproj
@@ -48,12 +48,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Airplane.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DLModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DLModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DLModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DLModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DLModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Flight.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FlightElement.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Setting.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TandemOrder.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>DLModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,6 +96,22 @@
       <DependentUpon>DLModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DLModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DLModel.Context.cs</LastGenOutput>
+      <DependentUpon>DLModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="DLModel.edmx.sql" />
+    <Content Include="DLModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DLModel.cs</LastGenOutput>
+      <DependentUpon>DLModel.edmx</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
