Dodano nowe klasy Optymalizacja EF Context

--- a/SkyReg/DataLayer/DataLayer.csproj
+++ b/SkyReg/DataLayer/DataLayer.csproj
@@ -85,6 +85,9 @@
     <Compile Include="User.cs">
       <DependentUpon>DLModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utils\ErrorInterceptor.cs" />
+    <Compile Include="Utils\Security.cs" />
+    <Compile Include="Utils\WorkDays.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
