Modyfikacje w strukturze projektu Dodanie nowych plików itp.

--- a/SkyReg/SkyReg/SkyReg.csproj
+++ b/SkyReg/SkyReg/SkyReg.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\Repository\Class1.cs" />
+    <Compile Include="BLL\Services\Class2.cs" />
     <Compile Include="Enums\FlightsStatuses.cs" />
     <Compile Include="Enums\UsersSpecialTypes.cs" />
     <Compile Include="FrmMain.cs">
@@ -59,10 +61,21 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForm\FrmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm\FrmLogin.Designer.cs">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm\Settings\Class3.cs" />
+    <Compile Include="MainForm\Tandem\Class4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm\FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +95,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="AppData\AC.ExtendedRenderer.Toolkit.dll" />
+    <Content Include="AppData\ComponentFactory.Krypton.Toolkit.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
